<resources>
    <string name="app_name">Baysafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Permission_text">In order to use this application we will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue tap on the button below.</string>
    <string name="long_press_on_the_map_n_to_add_a_geofence">Long press on the map \n to add a geofence</string>
    <string name="new_account_tv_top">Create a new Account</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="Sign_up">Sign Up</string>
    <string name="user_name">Name</string>
    <string name="user_password">Password</string>
    <string name="user_email">Email</string>
    <string name="sign_up_using_google">Sign up using Google</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="sign_in_using_google">Sign In using Google</string>
    <string name="already_registered">Already registered?</string>
    <string name="not_registered">Not registered?</string>
    <string name="about_us">We are a group of enthusiasts working relentlessly day in day out for utilising technology for a better cause. We aim to solve real-world problems and build products that can impact others. We are putting immense efforts into increasing our standards and hope to fulfill our dreams encouraging many others to dive deep into technology and bring the best out of it making the world a better place.</string>
    <string name="gfg_kiit">GFG KIIT</string>
    <string name="hintStart">To mark a location unsafe:</string>
    <string name="step1">Go to Map, click on the add button and then click on the first icon.</string>
    <string name="step2">Select the radius of the unsafe zone.</string>
    <string name="step3">Long hold the location where you wish to add unsafe zone.</string>
    <string name="step4">Congratulations, unsafe zone is added.</string>
    <string name="baysafe">BAYSAFE</string>

</resources>