<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".HintsFragment">

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:text="Hints"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/hintStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/hint"
        android:text="@string/hintStart"
        android:textColor="@color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint"
        />

    <TextView
        android:id="@+id/step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintStart"
        app:drawableStartCompat="@drawable/ic_tick" />
    <TextView
        android:id="@+id/step2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step1"
        app:drawableStartCompat="@drawable/ic_tick" />
    <TextView
        android:id="@+id/step3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step2"
        app:drawableStartCompat="@drawable/ic_tick" />
    <TextView
        android:id="@+id/step4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step4"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step3"
        app:drawableStartCompat="@drawable/ic_tick" />



</androidx.constraintlayout.widget.ConstraintLayout>